--- a/package.json
+++ b/package.json
@@ -17,12 +17,16 @@
     "@vitejs/plugin-react": "^2.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "typescript": "^4.7.4",
+    "typescript": "^5.8.3",
     "vite": "^3.0.4"
   },
   "dependencies": {
     "@react-spring/web": "^9.7.5",
+    "@tanstack/react-query": "^5.74.4",
+    "ethers": "^5.8.0",
     "gsap": "^3.12.7",
-    "react-intersection-observer": "^9.16.0"
+    "react-intersection-observer": "^9.16.0",
+    "viem": "^2.28.0",
+    "wagmi": "^2.14.16"
   }
 }
